name:                htut
version:             0.1.0.0
synopsis:            Create Haskell tutorials
description:         Please see README.md
homepage:            https://github.com/aaronvargo/htut#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Vargo
maintainer:          aaronvargo@users.noreply.github.com
copyright:           Aaron Vargo 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tut.Config
                     , Tut.Misc
                     , Tut.Pandoc
                     , Tut.Json
                     , Tut.Hakyll

  default-language:    Haskell2010
  build-depends:       aeson
                     , base
                     , containers
                     , filepath
                     , ghcid
                     , hakyll
                     , mtl
                     , pandoc
                     , pandoc-types
                     , split
                     , text
                     , transformers

source-repository head
  type:     git
  location: https://github.com/aaronvargo/htut