name:                htut
version:             0.1.0.0
synopsis:            Create Haskell tutorials
description:         Please see README.md
homepage:            https://github.com/aaronvargo/htut#readme
license:             BSD3
license-file:        LICENSE
author:              Aaron Vargo
maintainer:          aaronvargo@users.noreply.github.com
copyright:           Aaron Vargo 2016
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Tut
                     , Tut.Misc
                     , Tut.Transformation
                     , Tut.Include
                     , Tut.Ghci
                     , Tut.Metadata
                     , Tut.Pandoc
                     , Tut.Json
                     , Tut.Repl
                     , Tut.Hakyll
                     , Text.Pandoc.CodeBlock
                     , Control.Category1
  other-modules:       Tut.Imports
  default-language:    Haskell2010
  build-depends:       aeson
                     , base
                     , containers
                     , filepath
                     , ghcid
                     , keys
                     , lens
                     , mmorph
                     , monad-control
                     , monoid-extras
                     , mtl
                     , pandoc
                     , pandoc-types
                     , regex-compat
                     , resourcet
                     , split
                     , text
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , yaml
                     , hakyll

  default-extensions:  PartialTypeSignatures
                     , NoMonomorphismRestriction
                     , MultiParamTypeClasses
                     , FlexibleContexts
                     , FlexibleInstances
                     , LambdaCase
                     , TypeSynonymInstances
                     -- , OverloadedStrings

executable htut
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , htut
                     , directory
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aaronvargo/htut